In KCategorizedView::updateGeometries(), restore the vertical offset not only in ScrollPerPixel, but also in ScrollPerItem mode. Fixes the problem that Dolphin's Icons view may scroll to the top unexpectedly.

BUG: 256042
FIXED-IN: 4.5.5

svn path=/branches/KDE/4.5/kdelibs/; revision=1205217